tests/pass/cast/float2str.tox


fn main() {
  print 1.3330 as str;//expect:1.333
}