tests/fail/call/num.tox
fn main() {
    123 (); //Can only call functions and classes.
}